# soroban-example-dapp

./: .gitignore  Cargo.toml  README.md  bun.lockb  initialize.sh  initialize.ts  next-i18next.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: nodejs.yml
components/atoms/author-info/: index.tsx
components/molecules/deposits/: index.tsx
components/molecules/form-pledge/: index.tsx
components/molecules/wallet-data/: index.tsx
components/organisms/campaign/: index.tsx
components/organisms/pledge/: index.tsx
contracts/abundance/src/: contract.rs  test.rs
contracts/abundance/test_snapshots/test/: decimal_is_over_max.1.json  test.1.json  test_burn.1.json  transfer_from_insufficient_allowance.1.json  transfer_insufficient_balance.1.json
contracts/crowdfund/: Cargo.toml
contracts/crowdfund/src/: test.rs
contracts/crowdfund/test_snapshots/test/: sale_expired_recipient_not_allowed.1.json  sale_not_running.1.json  sale_still_running.1.json  sale_successful_non_recipient_still_denied_after_withdrawal.1.json  sale_successful_only_recipient.1.json  sale_successful_recipient_withdraws_only_once.1.json  test_events.1.json  test_expired.1.json  test_success.1.json
hooks/: useSubscription.ts
pages/: _app.tsx  index.tsx
public/locales/en/: home.json
public/locales/es/: home.json
public/locales/fr/: home.json
public/locales/hi/: home.json
shared/: contracts.ts
styles/: Home.module.css
