[workspace]
resolver = "2"

members = [
    "contracts/*",
]

[workspace.package]
rust-version = "1.74.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies]
soroban-sdk = "21.1.0-rc.1"
soroban-token-sdk = "21.1.0-rc.1"
