[workspace]
resolver = "2"

members = ["contracts/*"]

[workspace.package]
rust-version = "1.79.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies]
soroban-sdk = "21.0.1-preview.3"
soroban-token-sdk = "21.0.1-preview.3"
