[package]
name = "soroban-crowdfund-contract"
version = "0.0.0"
edition = "2021"
publish = false
autobins = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { version = "0.7.3" }
